Homework/MyCompiler/my_parser.output
Nonterminals useless in grammar

   null_statement
   procedure_call
   write_statement
   read_statement
   return_statement
   stop_statement
   for_statement
   repeat_statement
   while_statement
   if_statement
   elseif_list
   else_statement
   assign
   statement
   statement_seq
   const_decl
   eq_item
   eq_list
   type_decl
   type_item
   type_list
   type
   simple_type
   record_type
   rec_list
   rec_item
   array_type
   array_args
   ident_list
   id_list
   var_decl
   var_list
   var_item
   proc_decl
   proc_start
   proc_args
   func_decl
   func_start
   formal_params
   param
   params_list
   varef
   body
   block
   program
   func_proc_list


Terminals unused in grammar

   ARRAY_TOKEN
   BEGIN_TOKEN
   CONST_TOKEN
   DO_TOKEN
   DOWNTO_TOKEN
   ELSE_TOKEN
   ELSEIF_TOKEN
   END_TOKEN
   FOR_TOKEN
   FORWARD_TOKEN
   FUNCTION_TOKEN
   IF_TOKEN
   OF_TOKEN
   PROC_TOKEN
   READ_TOKEN
   RECORD_TOKEN
   REF_TOKEN
   REPEAT_TOKEN
   RETURN_TOKEN
   STOP_TOKEN
   THEN_TOKEN
   TO_TOKEN
   TYPE_TOKEN
   UNTIL_TOKEN
   VAR_TOKEN
   WHILE_TOKEN
   WRITE_TOKEN
   COLON_TOKEN
   SEMICOLON_TOKEN
   ASSIGN_TOKEN


Rules useless in grammar

   32 null_statement: %empty

   33 procedure_call: ID_TOKEN LPAREN_TOKEN args_list RPAREN_TOKEN

   34 write_statement: WRITE_TOKEN LPAREN_TOKEN args_list RPAREN_TOKEN

   35 read_statement: READ_TOKEN LPAREN_TOKEN args_list RPAREN_TOKEN

   36 return_statement: RETURN_TOKEN SEMICOLON_TOKEN
   37                 | RETURN_TOKEN expr SEMICOLON_TOKEN

   38 stop_statement: STOP_TOKEN

   39 for_statement: FOR_TOKEN ID_TOKEN ASSIGN_TOKEN expr TO_TOKEN expr DO_TOKEN statement_seq END_TOKEN
   40              | FOR_TOKEN ID_TOKEN ASSIGN_TOKEN expr DOWNTO_TOKEN expr DO_TOKEN statement_seq END_TOKEN

   41 repeat_statement: REPEAT_TOKEN statement_seq UNTIL_TOKEN expr

   42 while_statement: WHILE_TOKEN expr DO_TOKEN statement_seq END_TOKEN

   43 if_statement: IF_TOKEN expr THEN_TOKEN statement_seq elseif_list else_statement END_TOKEN

   44 elseif_list: %empty
   45            | ELSEIF_TOKEN expr THEN_TOKEN statement_seq elseif_list

   46 else_statement: %empty
   47               | ELSE_TOKEN statement_seq

   48 assign: lvalue ASSIGN_TOKEN expr

   49 statement: assign
   50          | if_statement
   51          | while_statement
   52          | repeat_statement
   53          | for_statement
   54          | stop_statement
   55          | return_statement
   56          | read_statement
   57          | write_statement
   58          | procedure_call
   59          | null_statement

   60 statement_seq: statement SEMICOLON_TOKEN statement_seq

   61 const_decl: CONST_TOKEN eq_item eq_list
   62           | %empty

   63 eq_item: ID_TOKEN EQ_TOKEN expr SEMICOLON_TOKEN

   64 eq_list: eq_item eq_list
   65        | %empty

   66 type_decl: TYPE_TOKEN type_item type_list
   67          | %empty

   68 type_item: ID_TOKEN EQ_TOKEN type SEMICOLON_TOKEN

   69 type_list: type_item type_list
   70          | %empty

   71 type: simple_type
   72     | record_type
   73     | array_type

   74 simple_type: ID_TOKEN

   75 record_type: RECORD_TOKEN rec_list END_TOKEN

   76 rec_list: rec_item rec_list
   77         | %empty

   78 rec_item: ident_list COLON_TOKEN type SEMICOLON_TOKEN

   79 array_type: ARRAY_TOKEN array_args OF_TOKEN type

   80 array_args: LBRAC_TOKEN args_list RBRAC_TOKEN

   81 ident_list: ID_TOKEN id_list

   82 id_list: COMMA_TOKEN ID_TOKEN

   83 var_decl: VAR_TOKEN var_item var_list
   84         | %empty

   85 var_list: var_item var_list
   86         | %empty

   87 var_item: ident_list COLON_TOKEN type SEMICOLON_TOKEN

   88 proc_decl: proc_start FORWARD_TOKEN SEMICOLON_TOKEN
   89          | proc_start body SEMICOLON_TOKEN

   90 proc_start: PROC_TOKEN ID_TOKEN proc_args SEMICOLON_TOKEN

   91 proc_args: LPAREN_TOKEN formal_params RPAREN_TOKEN

   92 func_decl: func_start COLON_TOKEN type SEMICOLON_TOKEN FORWARD_TOKEN SEMICOLON_TOKEN
   93          | func_start COLON_TOKEN type SEMICOLON_TOKEN body SEMICOLON_TOKEN

   94 func_start: FUNCTION_TOKEN ID_TOKEN proc_args

   95 formal_params: %empty
   96              | param params_list

   97 param: varef ident_list COLON_TOKEN type

   98 params_list: SEMICOLON_TOKEN param params_list
   99            | %empty

  100 varef: %empty
  101      | VAR_TOKEN
  102      | REF_TOKEN

  103 body: const_decl type_decl var_decl block

  104 block: BEGIN_TOKEN statement_seq END_TOKEN

  105 program: const_decl type_decl var_decl func_proc_list block PER_TOKEN

  106 func_proc_list: func_decl func_proc_list
  107               | proc_decl func_proc_list
  108               | %empty


State 25 conflicts: 13 shift/reduce
State 26 conflicts: 13 shift/reduce
State 49 conflicts: 13 shift/reduce
State 50 conflicts: 13 shift/reduce
State 51 conflicts: 13 shift/reduce
State 52 conflicts: 13 shift/reduce
State 53 conflicts: 13 shift/reduce
State 54 conflicts: 13 shift/reduce
State 55 conflicts: 13 shift/reduce
State 56 conflicts: 13 shift/reduce
State 57 conflicts: 13 shift/reduce
State 58 conflicts: 13 shift/reduce
State 59 conflicts: 13 shift/reduce
State 60 conflicts: 13 shift/reduce
State 61 conflicts: 13 shift/reduce


Grammar

    0 $accept: lvalue $end

    1 lvalue: ID_TOKEN
    2       | ID_TOKEN PER_TOKEN ID_TOKEN
    3       | ID_TOKEN RBRAC_TOKEN expr LBRAC_TOKEN

    4 expr: lvalue
    5     | expr OR_TOKEN expr
    6     | expr AND_TOKEN expr
    7     | expr EQ_TOKEN expr
    8     | expr NEQ_TOKEN expr
    9     | expr LEQ_TOKEN expr
   10     | expr GEQ_TOKEN expr
   11     | expr LESS_TOKEN expr
   12     | expr GREATER_TOKEN expr
   13     | expr ADD_TOKEN expr
   14     | expr SUB_TOKEN expr
   15     | expr MULT_TOKEN expr
   16     | expr DIV_TOKEN expr
   17     | expr REMAIN_TOKEN expr
   18     | TILDE_TOKEN expr
   19     | SUB_TOKEN expr
   20     | LPAREN_TOKEN expr RPAREN_TOKEN
   21     | ID_TOKEN LPAREN_TOKEN args_list RPAREN_TOKEN
   22     | CHR_TOKEN LPAREN_TOKEN expr RPAREN_TOKEN
   23     | ORD_TOKEN LPAREN_TOKEN expr RPAREN_TOKEN
   24     | PRED_TOKEN LPAREN_TOKEN expr RPAREN_TOKEN
   25     | SUCC_TOKEN LPAREN_TOKEN expr RPAREN_TOKEN
   26     | NUM_TOKEN
   27     | CHAR_TOKEN
   28     | STRING_TOKEN

   29 args_list: expr comma_expr

   30 comma_expr: %empty
   31           | COMMA_TOKEN expr


Terminals, with rules where they appear

$end (0) 0
error (256)
ARRAY_TOKEN (258)
BEGIN_TOKEN (259)
CHR_TOKEN (260) 22
CONST_TOKEN (261)
DO_TOKEN (262)
DOWNTO_TOKEN (263)
ELSE_TOKEN (264)
ELSEIF_TOKEN (265)
END_TOKEN (266)
FOR_TOKEN (267)
FORWARD_TOKEN (268)
FUNCTION_TOKEN (269)
IF_TOKEN (270)
OF_TOKEN (271)
ORD_TOKEN (272) 23
PRED_TOKEN (273) 24
PROC_TOKEN (274)
READ_TOKEN (275)
RECORD_TOKEN (276)
REF_TOKEN (277)
REPEAT_TOKEN (278)
RETURN_TOKEN (279)
STOP_TOKEN (280)
SUCC_TOKEN (281) 25
THEN_TOKEN (282)
TO_TOKEN (283)
TYPE_TOKEN (284)
UNTIL_TOKEN (285)
VAR_TOKEN (286)
WHILE_TOKEN (287)
WRITE_TOKEN (288)
ID_TOKEN (289) 1 2 3 21
ADD_TOKEN (290) 13
SUB_TOKEN (291) 14 19
MULT_TOKEN (292) 15
DIV_TOKEN (293) 16
AND_TOKEN (294) 6
OR_TOKEN (295) 5
TILDE_TOKEN (296) 18
EQ_TOKEN (297) 7
NEQ_TOKEN (298) 8
LESS_TOKEN (299) 11
GREATER_TOKEN (300) 12
LEQ_TOKEN (301) 9
GEQ_TOKEN (302) 10
PER_TOKEN (303) 2
COMMA_TOKEN (304) 31
COLON_TOKEN (305)
SEMICOLON_TOKEN (306)
LPAREN_TOKEN (307) 20 21 22 23 24 25
RPAREN_TOKEN (308) 20 21 22 23 24 25
LBRAC_TOKEN (309) 3
RBRAC_TOKEN (310) 3
ASSIGN_TOKEN (311)
REMAIN_TOKEN (312) 17
NUM_TOKEN (313) 26
CHAR_TOKEN (314) 27
STRING_TOKEN (315) 28


Nonterminals, with rules where they appear

$accept (61)
    on left: 0
lvalue (62)
    on left: 1 2 3, on right: 0 4
expr (63)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
    24 25 26 27 28, on right: 3 5 6 7 8 9 10 11 12 13 14 15 16 17 18
    19 20 22 23 24 25 29 31
args_list (64)
    on left: 29, on right: 21
comma_expr (65)
    on left: 30 31, on right: 29


State 0

    0 $accept: . lvalue $end

    ID_TOKEN  shift, and go to state 1

    lvalue  go to state 2


State 1

    1 lvalue: ID_TOKEN .
    2       | ID_TOKEN . PER_TOKEN ID_TOKEN
    3       | ID_TOKEN . RBRAC_TOKEN expr LBRAC_TOKEN

    PER_TOKEN    shift, and go to state 3
    RBRAC_TOKEN  shift, and go to state 4

    $default  reduce using rule 1 (lvalue)


State 2

    0 $accept: lvalue . $end

    $end  shift, and go to state 5


State 3

    2 lvalue: ID_TOKEN PER_TOKEN . ID_TOKEN

    ID_TOKEN  shift, and go to state 6


State 4

    3 lvalue: ID_TOKEN RBRAC_TOKEN . expr LBRAC_TOKEN

    CHR_TOKEN     shift, and go to state 7
    ORD_TOKEN     shift, and go to state 8
    PRED_TOKEN    shift, and go to state 9
    SUCC_TOKEN    shift, and go to state 10
    ID_TOKEN      shift, and go to state 11
    SUB_TOKEN     shift, and go to state 12
    TILDE_TOKEN   shift, and go to state 13
    LPAREN_TOKEN  shift, and go to state 14
    NUM_TOKEN     shift, and go to state 15
    CHAR_TOKEN    shift, and go to state 16
    STRING_TOKEN  shift, and go to state 17

    lvalue  go to state 18
    expr    go to state 19


State 5

    0 $accept: lvalue $end .

    $default  accept


State 6

    2 lvalue: ID_TOKEN PER_TOKEN ID_TOKEN .

    $default  reduce using rule 2 (lvalue)


State 7

   22 expr: CHR_TOKEN . LPAREN_TOKEN expr RPAREN_TOKEN

    LPAREN_TOKEN  shift, and go to state 20


State 8

   23 expr: ORD_TOKEN . LPAREN_TOKEN expr RPAREN_TOKEN

    LPAREN_TOKEN  shift, and go to state 21


State 9

   24 expr: PRED_TOKEN . LPAREN_TOKEN expr RPAREN_TOKEN

    LPAREN_TOKEN  shift, and go to state 22


State 10

   25 expr: SUCC_TOKEN . LPAREN_TOKEN expr RPAREN_TOKEN

    LPAREN_TOKEN  shift, and go to state 23


State 11

    1 lvalue: ID_TOKEN .
    2       | ID_TOKEN . PER_TOKEN ID_TOKEN
    3       | ID_TOKEN . RBRAC_TOKEN expr LBRAC_TOKEN
   21 expr: ID_TOKEN . LPAREN_TOKEN args_list RPAREN_TOKEN

    PER_TOKEN     shift, and go to state 3
    LPAREN_TOKEN  shift, and go to state 24
    RBRAC_TOKEN   shift, and go to state 4

    $default  reduce using rule 1 (lvalue)


State 12

   19 expr: SUB_TOKEN . expr

    CHR_TOKEN     shift, and go to state 7
    ORD_TOKEN     shift, and go to state 8
    PRED_TOKEN    shift, and go to state 9
    SUCC_TOKEN    shift, and go to state 10
    ID_TOKEN      shift, and go to state 11
    SUB_TOKEN     shift, and go to state 12
    TILDE_TOKEN   shift, and go to state 13
    LPAREN_TOKEN  shift, and go to state 14
    NUM_TOKEN     shift, and go to state 15
    CHAR_TOKEN    shift, and go to state 16
    STRING_TOKEN  shift, and go to state 17

    lvalue  go to state 18
    expr    go to state 25


State 13

   18 expr: TILDE_TOKEN . expr

    CHR_TOKEN     shift, and go to state 7
    ORD_TOKEN     shift, and go to state 8
    PRED_TOKEN    shift, and go to state 9
    SUCC_TOKEN    shift, and go to state 10
    ID_TOKEN      shift, and go to state 11
    SUB_TOKEN     shift, and go to state 12
    TILDE_TOKEN   shift, and go to state 13
    LPAREN_TOKEN  shift, and go to state 14
    NUM_TOKEN     shift, and go to state 15
    CHAR_TOKEN    shift, and go to state 16
    STRING_TOKEN  shift, and go to state 17

    lvalue  go to state 18
    expr    go to state 26


State 14

   20 expr: LPAREN_TOKEN . expr RPAREN_TOKEN

    CHR_TOKEN     shift, and go to state 7
    ORD_TOKEN     shift, and go to state 8
    PRED_TOKEN    shift, and go to state 9
    SUCC_TOKEN    shift, and go to state 10
    ID_TOKEN      shift, and go to state 11
    SUB_TOKEN     shift, and go to state 12
    TILDE_TOKEN   shift, and go to state 13
    LPAREN_TOKEN  shift, and go to state 14
    NUM_TOKEN     shift, and go to state 15
    CHAR_TOKEN    shift, and go to state 16
    STRING_TOKEN  shift, and go to state 17

    lvalue  go to state 18
    expr    go to state 27


State 15

   26 expr: NUM_TOKEN .

    $default  reduce using rule 26 (expr)


State 16

   27 expr: CHAR_TOKEN .

    $default  reduce using rule 27 (expr)


State 17

   28 expr: STRING_TOKEN .

    $default  reduce using rule 28 (expr)


State 18

    4 expr: lvalue .

    $default  reduce using rule 4 (expr)


State 19

    3 lvalue: ID_TOKEN RBRAC_TOKEN expr . LBRAC_TOKEN
    5 expr: expr . OR_TOKEN expr
    6     | expr . AND_TOKEN expr
    7     | expr . EQ_TOKEN expr
    8     | expr . NEQ_TOKEN expr
    9     | expr . LEQ_TOKEN expr
   10     | expr . GEQ_TOKEN expr
   11     | expr . LESS_TOKEN expr
   12     | expr . GREATER_TOKEN expr
   13     | expr . ADD_TOKEN expr
   14     | expr . SUB_TOKEN expr
   15     | expr . MULT_TOKEN expr
   16     | expr . DIV_TOKEN expr
   17     | expr . REMAIN_TOKEN expr

    ADD_TOKEN      shift, and go to state 28
    SUB_TOKEN      shift, and go to state 29
    MULT_TOKEN     shift, and go to state 30
    DIV_TOKEN      shift, and go to state 31
    AND_TOKEN      shift, and go to state 32
    OR_TOKEN       shift, and go to state 33
    EQ_TOKEN       shift, and go to state 34
    NEQ_TOKEN      shift, and go to state 35
    LESS_TOKEN     shift, and go to state 36
    GREATER_TOKEN  shift, and go to state 37
    LEQ_TOKEN      shift, and go to state 38
    GEQ_TOKEN      shift, and go to state 39
    LBRAC_TOKEN    shift, and go to state 40
    REMAIN_TOKEN   shift, and go to state 41


State 20

   22 expr: CHR_TOKEN LPAREN_TOKEN . expr RPAREN_TOKEN
